@@ -3,26 +3,18 @@ Hash: SHA256
 
 AUX pyxattr-0.5.1-test-bytes.patch 544 SHA256 e10ca069878137ce9e48d300ede53dd66858b4136a4ff53705ae0236f51a641e SHA512 3e4d2776b5cc4a76123cd504e060f8e830fad1a778502825b0999af7f38a481bab39effdcfcacc12c102f1377c34315410d1d44a96dbfd94e961b2207d96d9e3 WHIRLPOOL 6c48568e03e98066aa3b6230533edab73f9ef912e5076ae5e7b89306d8e149813f8859702eb2531b9c6cf342e128ef8de80ce9ae3d0d5a765a5a0fddb1274e42
 DIST pyxattr-0.5.3.tar.gz 25977 SHA256 c395b34707506aa4e74da4930efaec9bb84bd652d8459de5b603bb8dc8b1d585 SHA512 ac1aa227ab9980e0b05bf71ac4466e8747791a0d5ea30d404359526ca32e6846ad9d4ef72208ff9c7a8208d91ffa309feebe7eab818ef2dc3ae1a5e9414ffeaa WHIRLPOOL 905076e9917d8eb8f78a564d31dfe7c649cd459106513dea53985eb026a144dfbaf062992786f63b799ec7410eec9dbc3f4ae9c41cbb7e1ec61f769c81fa6898
+DIST pyxattr-0.5.5.tar.gz 26718 SHA256 132297c35261dd74b2ae2bd558e725b04834bbdf60997495e0110e255f5f2a3f SHA512 77b732a7e524a7c31a0511df2c96c18b214f93c6ac47276ecdf12ed95133ee506fa882b2532a7159aa2f4e02a7128e33bb8883ea632a5394297d98fb28898327 WHIRLPOOL 42db6c0d603f5bfca951a39194e5b95d4285a68b4c5e3f77ffe806fb5f05e46ce2f12dadc2d598c40178b68b83ee947b50474c7c026dc8e40378fc9c552a5180
 EBUILD pyxattr-0.5.3.ebuild 1443 SHA256 fd969f208ba7b0ec26c45dde7668b6cd6238bacc7ebcc6ec0e5f056c43b1c304 SHA512 1db496c942383b070ffd355fefce42fa8535cce762bd1b07387c070619c7588a2fecff40fea5e84919a42980983860884a8cb65c5745f6ec71bb5043822aeb28 WHIRLPOOL e18acee1db9e4eb28e68ee6f2c2286b6be6bd0019838833d1e8db7e8ed4169c0a7f9e08b39cc01e59bbe83d727b5aa8d9b13bd6151d832f15ca97d9a4bf03f35
+EBUILD pyxattr-0.5.5.ebuild 1453 SHA256 076ba75c4f22171a2e553fa18fc5c5802a662dbecc8ef8bd4f3f164200855a34 SHA512 27c0e78b44c1270ed553dd79c1d2cd31411a35815d644e229cf4b529ecec92c8589d808dd44be1eddcbe85b5fcd0c854aaf6632c84ff8bac690b1ab0e954a9e3 WHIRLPOOL 9ee48dd7482280b137eb757b8a17a20bdfba81edbad6cb04fe841a85ea0187812a10ee52eff31a4926022d45b84ae54c0d1d7f224117cfdda75856653731a194
 EBUILD pyxattr-9999.ebuild 1239 SHA256 f6c9dcd320b89a88ae85cae488420e20f3c8114fcd95caa88b97e94b20abcb73 SHA512 0a4fcd6a2cc10d9a81f4b93b09f28de01bd43f1858265fb0cbaa7ba541b4eb2d752cf664af56370764c02b4fd71599bdaf489480d48454569c5043bf5a3f244a WHIRLPOOL 32a2acff6d3966c3b476924d765ba5612eec90d3a96669dfae34e24f28c4d394b4172cd4493ef6aa275777b7a19ecb0daf63230bd987aa30fa01e59561dc1e54
-MISC ChangeLog 8611 SHA256 f58fd3d217fbae9da5368060da42d300fd7083140cb2fd3584bd7685de83b266 SHA512 f913c1f5931e289083a25abc2f9aba265a9ba604bd7f8e0139c6c52310edc37faeb439631028d4ca207c4afccd3d7c40d61505c09dc8bcddd5ac9af553816ef5 WHIRLPOOL 71061984a7ae25ab124cba600bfa1b04b2b506fef1625f73621e70c9d5c5c4e550c403503be6d4460830ec77a9169d8949bff6cd415389372ba1327b3c98d793
+MISC ChangeLog 8721 SHA256 b0948e99ecb3d3af5688b83b2842cdb945f7d081e46fc4d8b266e27cef2ccf67 SHA512 d6402247a9a2c59a025b59cf63c3e9b650bb36b8b863e34f11bb5c0d1d7e998384ca6c3debab3e1e6490aeeac9a332b82ccd61c9498f5ff6bb0cac1cbcf04d5f WHIRLPOOL df13f1391c0cf958620646da80ef9f3b28d378b208cd652300fd6287037b1f23aa3d72001bbaaeecd8654cebd2e893cf7e79d46e2676bee512bfe3a3a5af28e5
 MISC metadata.xml 510 SHA256 cee88c8c6dee97c608372c2bc48c5e8eae4098aa5fba01b0d7e3d406a8f38ff1 SHA512 96f959252fb5ef2a588c85246c2711270fcc8c15ecaf4bea50e77a52c37a99e31b76fb360a4a38241896cdd6ec377d62401f23d890cc7b8e3a4455b76d4a3f6b WHIRLPOOL 32e5be7a4e368dbd3fdcdceba7cd0644c19d1cdc439150904ef14840862b2341461066dac32140f27273eeab46368af89f484f921378e9394392f5d124249248
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJVJOKPXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOlI8QALlbwePK4IRzYC3e1ZnTk3D5
-ImVIaMg7upfm6riY7+2anwj+lG6bA9rBTUTJMhIrLrEZTFdx1U79wfJZf6fJ4x23
-AlGhI6Yqvm9PNXmPfwqwwJV6HqW/wfx3W8XO7Za9dEu+VpeU1+ezxNVbKF6LtQt1
-vqSXEgLdtTge0l2jqsd/oGNJjvdhH4eRcMIfSDzuTtvjbwmwTqAtk7funCmxbSdt
-ooNY2CljoKZzU0vyDLUCTCdRqD6CPfrWGG+r5/fjfkkRdP7Nov3qhEsdY3c/3pf6
-ydEWquqbJNeS+VCpMdnGUfvm6M9z4ceth6/glNyRVYqSe9r3vk6sESHX+JouHuTb
-ei728Qlow+apPpGFHdpz29Elj0vMxKTQRUnONvqLFbMAm9zXwtjoa3ypIkWYXjqt
-1dK5Laufa7tc9eUVI72yYZtm8D5dNrsa13YTLtrExSTdtGgOdW6jQHYk7inE5Wub
-vEhEusgICWkobTAMJYYtyAB9/YoxcEkK/NqXxYYEsyJyB6Lqq+OZtcULsSWgoUOw
-6XgPo5ePJ+iL+iGRMBbdgZYVCn+j1806bzshWYQyZX72iFU/kDkLXmaczccqeIRT
-u6o9sNHs0HvFI5Lt6pwQoj0P6AroylHMiikjWf2t5HzGeOQ/PH7tfYaWB+cUwjVD
-KKkEXF7144c8nr4zKoEY
-=s51s
+iKYEAREIAGYFAlVUBe9fFIAAAAAALgAoaXNzdWVyLWZwckBub3RhdGlvbnMub3Bl
+bnBncC5maWZ0aGhvcnNlbWFuLm5ldDdDQUM1OUY0ODkzMERBREU1NUQ1RjJBRkIy
+OEVDMjEzQjgwNzJCMEQACgkQso7CE7gHKw0RSACdEFGD4LDk8AhL3nyyf3hIoqBJ
+WwIAn2rJjYgT+qp25NITdyUvTAQs34Wx
+=1iae
 -----END PGP SIGNATURE-----
