@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/pyxattr
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyxattr/ChangeLog,v 1.75 2015/04/08 08:04:59 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyxattr/ChangeLog,v 1.76 2015/05/14 02:18:08 idella4 Exp $
+
+*pyxattr-0.5.5 (14 May 2015)
+
+  14 May 2015; Ian Delaney <idella4@gentoo.org> +pyxattr-0.5.5.ebuild:
+  bump
 
   08 Apr 2015; Michał Górny <mgorny@gentoo.org> pyxattr-0.5.3.ebuild,
   pyxattr-9999.ebuild:
